stbhw/src/sys/bindings.rs

/* automatically generated by rust-bindgen 0.59.1 */

extern "C" {
    pub fn stbhw_get_last_error() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn stbhw_build_tileset_from_image(
        ts: *mut stbhw_tileset,
        pixels: *mut ::std::os::raw::c_uchar,
        stride_in_bytes: ::std::os::raw::c_int,
        w: ::std::os::raw::c_int,
        h: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn stbhw_free_tileset(ts: *mut stbhw_tileset);
}
extern "C" {
    pub fn stbhw_generate_image(
        ts: *mut stbhw_tileset,
        weighting: *mut *mut ::std::os::raw::c_int,
        pixels: *mut ::std::os::raw::c_uchar,
        stride_in_bytes: ::std::os::raw::c_int,
        w: ::std::os::raw::c_int,
        h: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[doc = ""]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stbhw_tile {
    pub a: ::std::os::raw::c_schar,
    pub b: ::std::os::raw::c_schar,
    pub c: ::std::os::raw::c_schar,
    pub d: ::std::os::raw::c_schar,
    pub e: ::std::os::raw::c_schar,
    pub f: ::std::os::raw::c_schar,
    pub pixels: [::std::os::raw::c_uchar; 1usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stbhw_tileset {
    pub is_corner: ::std::os::raw::c_int,
    pub num_color: [::std::os::raw::c_int; 6usize],
    pub short_side_len: ::std::os::raw::c_int,
    pub h_tiles: *mut *mut stbhw_tile,
    pub v_tiles: *mut *mut stbhw_tile,
    pub num_h_tiles: ::std::os::raw::c_int,
    pub max_h_tiles: ::std::os::raw::c_int,
    pub num_v_tiles: ::std::os::raw::c_int,
    pub max_v_tiles: ::std::os::raw::c_int,
}
#[doc = "  TEMPLATE GENERATOR  //////////////////////////"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stbhw_config {
    pub is_corner: ::std::os::raw::c_int,
    pub short_side_len: ::std::os::raw::c_int,
    pub num_color: [::std::os::raw::c_int; 6usize],
    pub num_vary_x: ::std::os::raw::c_int,
    pub num_vary_y: ::std::os::raw::c_int,
    pub corner_type_color_template: [[::std::os::raw::c_int; 4usize]; 4usize],
}
extern "C" {
    pub fn stbhw_get_template_size(
        c: *mut stbhw_config,
        w: *mut ::std::os::raw::c_int,
        h: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn stbhw_make_template(
        c: *mut stbhw_config,
        data: *mut ::std::os::raw::c_uchar,
        w: ::std::os::raw::c_int,
        h: ::std::os::raw::c_int,
        stride_in_bytes: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
